
2018-02-26 Franz Holzinger <franz@ttproducts.de>
    * move getSimpleTemplate from CreateView into Template

2018-02-21 Franz Holzinger <franz@ttproducts.de>
    * extract methods render for class AfterSaveView and getKeyAfterSave for Template out of the CreateView methods afterSave and getKeyAfterSave

2018-02-13 Franz Holzinger <franz@ttproducts.de>
    * extract classes DeleteView, EditView and Template out of CreateView

2018-01-06 Franz Holzinger <franz@ttproducts.de>
    * new feature: Add a cancel option to the confirmation dialog for APPROVE and DELETE
    * new feature: automatic generation of customer number
    * new feature: add the marker ###XHTML### which can transform the HTML into XHTML

2017-12-21 Franz Holzinger <franz@ttproducts.de>
    * bugfix: XHTML shall be used in the example HTML template file

2017-12-20 Franz Holzinger <franz@ttproducts.de>
    * bugfix: no htmlspecialchars must be done with link urls because the & must remain in the form action

2017-11-30 Franz Holzinger <franz@ttproducts.de>
    * bugfix: CaptchaManager for TYPO3 7 and 8

2017-11-28 Franz Holzinger <franz@ttproducts.de>
    * insert a check to verify if the static setup from this extension has been included in the website TypoScript

2017-10-05 Franz Holzinger <franz@ttproducts.de>
    * support for extensions like agency_tt_address
    * bugfix: CaptchaManager for TYPO3 7 and 8
    * bugfix: doNotEnforceUsername must not require the username even if it is in setup
    * replace all t3lib functions in the new classname code

2017-07-29 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The security hash must always be valid during a CREATE if no former value exists.
    * bugfix: No automatic login must be tempted after an APPROVE
    * support for TYPO3 8.x

2017-02-10 Franz Holzinger <franz@ttproducts.de>
    * bugfix: value set by overrideValues if must not be overwritten again

2016-11-26 Franz Holzinger <franz@ttproducts.de>