@@ -1,4 +1,7 @@
 
+2018-03-02 Franz Holzinger <franz@ttproducts.de>
+    * rename Classes/Api/Email.php => Classes/Controller/Email.php
+
 2018-02-26 Franz Holzinger <franz@ttproducts.de>
     * move getSimpleTemplate from CreateView into Template
 
